fix image alignment

--- a/src/index.scss
+++ b/src/index.scss
@@ -53,6 +53,7 @@ body {
 }
 #regulatory-image div:last-child img {
     width: 100px;
+    margin: 10px 0;
 }
 #images {
     display: flex;
@@ -67,7 +68,7 @@ body {
 }
 .social-icons a {
     padding: 4px;
-    min-width: 35px;
+    min-width: 25px;
 }
 #footer a {
     display: inline-block;
